package com.common.server.grpc.service;

import com.common.server.grpc.common.ApiResponse;
import com.common.server.grpc.common.Empty;
import com.common.server.grpc.common.PageRequest;
import com.common.server.grpc.user.*;
import io.grpc.stub.StreamObserver;
import lombok.extern.slf4j.Slf4j;
import net.devh.boot.grpc.server.service.GrpcService;

/**
 * User gRPC Service
 *
 * TODO: Implement actual user management logic
 * - Connect to UserRepository/UserService
 * - Add authentication/authorization
 * - Implement error handling
 *
 * Example usage in client:
 * - Get user: userService.getUser(userId)
 * - Get profile: userService.getProfile()
 * - Update profile: userService.updateProfile(data)
 */
@Slf4j
@GrpcService
public class UserGrpcService extends UserServiceGrpc.UserServiceImplBase {

    @Override
    public void getUser(GetUserRequest request, StreamObserver<UserResponse> responseObserver) {
        log.debug("Get user requested: {}", request.getUserId());

        // TODO: Implement user retrieval logic
        UserResponse response = UserResponse.newBuilder()
                .setSuccess(false)
                .setMessage("Not implemented yet")
                .build();

        responseObserver.onNext(response);
        responseObserver.onCompleted();
    }

    @Override
    public void getProfile(Empty request, StreamObserver<UserResponse> responseObserver) {
        log.debug("Get profile requested");

        // TODO: Get current user from authentication context
        // TODO: Retrieve user profile from database
        UserResponse response = UserResponse.newBuilder()
                .setSuccess(false)
                .setMessage("Not implemented yet")
                .build();

        responseObserver.onNext(response);
        responseObserver.onCompleted();
    }

    @Override
    public void updateProfile(UpdateProfileRequest request, StreamObserver<UserResponse> responseObserver) {
        log.debug("Update profile requested");

        // TODO: Get current user from authentication context
        // TODO: Update user profile in database
        UserResponse response = UserResponse.newBuilder()
                .setSuccess(false)
                .setMessage("Not implemented yet")
                .build();

        responseObserver.onNext(response);
        responseObserver.onCompleted();
    }

    @Override
    public void listUsers(PageRequest request, StreamObserver<UserListResponse> responseObserver) {
        log.debug("List users requested: page={}, size={}", request.getPage(), request.getSize());

        // TODO: Implement user list with pagination
        UserListResponse response = UserListResponse.newBuilder()
                .setSuccess(false)
                .setMessage("Not implemented yet")
                .build();

        responseObserver.onNext(response);
        responseObserver.onCompleted();
    }

    @Override
    public void deleteUser(DeleteUserRequest request, StreamObserver<ApiResponse> responseObserver) {
        log.debug("Delete user requested: {}", request.getUserId());

        // TODO: Implement user deletion logic
        // TODO: Add authorization check
        ApiResponse response = ApiResponse.newBuilder()
                .setSuccess(false)
                .setMessage("Not implemented yet")
                .setCode(501)
                .build();

        responseObserver.onNext(response);
        responseObserver.onCompleted();
    }
}
